--- a/orders.html
+++ b/orders.html
@@ -21,7 +21,7 @@
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="index.html" class="header-link">
+        <a href="amazon.html" class="header-link">
           <img class="amazon-logo"
             src="images/amazon-logo-white.png">
           <img class="amazon-mobile-logo"
@@ -56,7 +56,7 @@
 
       <div class="orders-grid">
         <div class="order-container">
-          
+
           <div class="order-header">
             <div class="order-header-left-section">
               <div class="order-date">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="product-actions">
-              <a href="tracking.html">
+              <a href="tracking.html?orderId=123&productId=456">
                 <button class="track-package-button button-secondary">
                   Track package
                 </button>
